--- a/vue3/index.html
+++ b/vue3/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Vue3 + Vite4 + TypeScript5 + Element-Plus 的后台管理模板，配套接口文档和后端源码，vue-element-admin 的 Vue3 版本"
+      content="启航电商OMS订单处理系统"
     />
-    <meta name="keywords" content="vue-element-admin,vue3-element-admin" />
-    <title>vue3-element-admin</title>
+    <meta name="keywords" content="oms,oms订单处理系统" />
+    <title>启航电商OMS订单处理系统</title>
   </head>
 
   <body>
