--- a/vue3/index.html
+++ b/vue3/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="启航电商OMS订单处理系统"
+      content="启航电商OMS系统"
     />
-    <meta name="keywords" content="oms,oms订单处理系统" />
-    <title>启航电商OMS订单处理系统</title>
+    <meta name="keywords" content="oms,oms系统,订单处理系统" />
+    <title>启航电商OMS系统</title>
   </head>
 
   <body>
